Revision history for Perl extension RPi::WiringPi.

2.3619 UNREL

2.3618  2017-07-01
        - incorporated RPi::Serial
        - bumped remaining prereqs specific to RPi:: that needed it to encompass
          all known bug fixes and feature adds
        - hid all of the setup() tests. Somewhere in the last commits we broke
          it, but that's actually ok

2.3617  2017-06-28
        - fix wire colour for the DAC CS pin in the diagram (light blue from
          orange)
        - added the tester flag to bbdispatch in the FAQs automated test section
        - bump ver of RPi::LCD to 2.3603 due to a bug fix
        - added new tests to t/60-lcd.t to verify that RPi::LCD dies() properly
          if too many LCD objects are initialized (closes #35)
        - bump prereq of RPi::DHT11 from v1.02 to v1.03
        - bump prereq of RPi::I2C from v2.3602 to v2.3603

2.3616  2017-06-24
        - fix FAQ link in the Test portion of POD
        - clean up the way _fatal_exit() works. There's more to do here
        - tidy how the RPI_PINS env var is worked on in certain Util:: methods
        - incorporated RPi::I2C; updated POD and FAQ
        - added t/65-i2c.t for the I2C stuff. Requires an Arduino. See
          examples/arduino.ino for details
        - added a copy of the arduino.ino sketch for testing RPi::I2C, in
          docs/sketch
        - fixed bug in arduino.ino that wasn't resetting the register variable
          back to default, causing failure of a basic read if the I2C bus hadn't
          been reset before another t/65-i2c.t test run (removed workaround from
          the test as well)
        - bump ver of RPi::WiringPi::Constant prereq after adding ALT mode tag
        - bump ver of WiringPi::API to 2.36.12 due to updates in that module
        - bump ver of RPi::Pin to 2.3602
        - added t/70-mode_alt.t to test the various ALT pin modes
        - fix shift register tests. The pins were outside of the $pi object